I added PaymanntController as a implemantation of DefaultApi(OpenApi)
